--- a/scss/components/component-dir.scss
+++ b/scss/components/component-dir.scss
@@ -1,6 +1,10 @@
 @import 'hamburger';
 @import 'mobile-nav';
 @import 'arrow-line';
-@import 'sidebar';
+@import 'sidebars';
 @import 'cards';
 @import 'form';
+
+/*CASE STUDIES*/
+@import 'snapchat-intro';
+@import 'snap-filter';
