--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,6 +3,7 @@ $red: #FF1744;
 $gray: #A0A0A0;
 $shadow: rgba(0,0,0,0.1);
 $ltgray: #F0F0F0;
+$yellow: #FFFF00;
 
 /*FONT*/
 $nunito: 'Nunito Sans', 'Helvetica', sans-serif;
