--- a/css/main.css
+++ b/css/main.css
@@ -41,26 +41,81 @@ img {
   width: 100%;
   height: auto; }
 
-.intro, #portfolio, #about, #skills, #contact {
+.intro, #portfolio, #about, #skills, #contact, .cs-container {
   max-width: 1420px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 2.5rem; }
   @media (min-width: 720px) {
-    .intro, #portfolio, #about, #skills, #contact {
+    .intro, #portfolio, #about, #skills, #contact, .cs-container {
       padding: 0 4rem; } }
 
 @media (min-width: 1010px) {
-  #portfolio, #about, #skills, #contact {
-    padding: 0 16rem 0 20rem; } }
+  #portfolio, #about, #skills, #contact, .cs-container {
+    padding: 0 20rem 0 20rem; } }
 
 @media (min-width: 1240px) {
-  #portfolio, #about, #skills, #contact {
-    padding: 0 21rem 0 25rem; } }
+  #portfolio, #about, #skills, #contact, .cs-container {
+    padding: 0 25rem 0 25rem; } }
 
 @media (min-width: 1420px) {
-  #portfolio, #about, #skills, #contact {
-    padding: 0 26rem 0 30rem; } }
+  #portfolio, #about, #skills, #contact, .cs-container {
+    padding: 0 30rem 0 30rem; } }
+
+.cs-heading {
+  font-weight: 800;
+  font-size: 2.4rem;
+  margin-bottom: 3rem; }
+
+.cs-title {
+  display: none; }
+  @media (min-width: 1010px) {
+    .cs-title {
+      display: block;
+      font-size: 5rem; } }
+  @media (min-width: 1240px) {
+    .cs-title {
+      font-size: 6.4rem; } }
+  @media (min-width: 1420px) {
+    .cs-title {
+      font-size: 7.2rem; } }
+
+.mobile-title {
+  padding: 5rem 0 0;
+  font-size: 3.6rem; }
+  @media (min-width: 1010px) {
+    .mobile-title {
+      display: none; } }
+
+.cs-fw {
+  margin-top: 15rem; }
+  .cs-fw:first-of-type {
+    margin-top: 5rem; }
+  @media (min-width: 720px) {
+    .cs-fw {
+      margin-top: 30rem; }
+      .cs-fw:first-of-type {
+        margin-top: 8rem; } }
+
+.more-projects {
+  margin-top: 15rem;
+  margin-bottom: 15rem; }
+  .more-projects:after {
+    content: "";
+    display: table;
+    clear: both; }
+  @media (min-width: 720px) {
+    .more-projects {
+      margin-top: 30rem;
+      margin-bottom: 20rem; } }
+  .more-projects .card:last-of-type {
+    margin-top: 8rem; }
+  @media (min-width: 600px) {
+    .more-projects .card:first-of-type {
+      float: left; }
+    .more-projects .card:last-of-type {
+      margin-top: 0;
+      float: right; } }
 
 .intro {
   width: 100vw;
@@ -307,34 +362,69 @@ img {
   border-top: 1px solid #A0A0A0;
   border-right: 1px solid #A0A0A0;
   border-width: 1px;
-  -moz-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
   transform: rotate(135deg); }
 
 .line {
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
   height: 3rem;
-  border-left: 1px solid #A0A0A0; }
-  .line:hover {
-    height: 4rem; }
+  -webkit-animation: grow 2s;
+  animation: grow 2s;
+  border-left: 1px solid #A0A0A0;
+  display: inline-block; }
 
-.sidebar {
+@-webkit-keyframes grow {
+  0% {
+    height: 0; }
+  100% {
+    height: 3rem; } }
+
+@keyframes grow {
+  0% {
+    height: 0; }
+  100% {
+    height: 3rem; } }
+  @media (min-width: 720px) {
+    .line {
+      height: 4.5rem; }
+    @-webkit-keyframes grow {
+      0% {
+        height: 0; }
+      100% {
+        height: 4.5rem; } }
+    @keyframes grow {
+      0% {
+        height: 0; }
+      100% {
+        height: 4.5rem; } } }
+
+.extend {
+  height: 4rem; }
+  @media (min-width: 720px) {
+    .extend {
+      height: 6.5rem; } }
+
+.sidebar, .cs-sidebar {
   -webkit-transition: all 0.4s ease;
   -o-transition: all 0.4s ease;
   transition: all 0.4s ease;
   display: none; }
   @media (min-width: 1010px) {
-    .sidebar {
+    .sidebar, .cs-sidebar {
       width: 100vh;
-      min-width: 750px;
-      height: 4rem;
+      height: 5rem;
       position: fixed;
-      left: -4rem;
+      top: 100%;
+      left: -5rem;
       display: block;
       visibility: hidden;
+      -webkit-transform-origin: left top;
       transform-origin: left top;
+      -webkit-transform: rotate(-90deg);
       transform: rotate(-90deg); }
-      .sidebar a {
+      .sidebar a, .cs-sidebar a {
         -webkit-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
@@ -344,11 +434,14 @@ img {
         color: #A0A0A0;
         font-size: 1.2rem;
         text-align: center;
-        line-height: 4rem;
+        line-height: 5rem;
         letter-spacing: 0.2rem;
         text-decoration: none; }
-        .sidebar a:hover {
+        .sidebar a:hover, .cs-sidebar a:hover {
           background: #F0F0F0; } }
+
+.cs-sidebar a {
+  width: 100%; }
 
 .link-active {
   background: #F0F0F0; }
@@ -443,6 +536,7 @@ form .submit-btn {
   height: 4rem;
   margin-top: 5rem;
   border: 1px solid black;
+  border-radius: 0;
   background: transparent;
   font-size: 1.4rem;
   cursor: pointer; }
@@ -453,3 +547,111 @@ form .submit-btn {
     form .submit-btn {
       width: 25rem;
       margin-top: 7rem; } }
+
+/*CASE STUDIES*/
+.snapchat-intro {
+  width: 100%;
+  height: 50vh;
+  background: #FFFF00;
+  position: relative;
+  overflow: hidden; }
+  @media (min-width: 720px) {
+    .snapchat-intro {
+      height: 70vh; } }
+  @media (min-width: 1010px) {
+    .snapchat-intro {
+      height: 85vh; } }
+  .snapchat-intro .cs-title {
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    position: absolute;
+    top: 50%;
+    left: 6vw; }
+    @media (min-width: 1240px) {
+      .snapchat-intro .cs-title {
+        left: 8vw; } }
+    @media (min-width: 1420px) {
+      .snapchat-intro .cs-title {
+        left: 10vw; } }
+  .snapchat-intro .snap-pics {
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    text-align: center; }
+    @media (min-width: 1010px) {
+      .snapchat-intro .snap-pics {
+        width: auto;
+        display: inline-block;
+        right: 6vw; } }
+    @media (min-width: 1240px) {
+      .snapchat-intro .snap-pics {
+        right: 8vw; } }
+    @media (min-width: 1420px) {
+      .snapchat-intro .snap-pics {
+        right: 10vw; } }
+    .snapchat-intro .snap-pics img {
+      width: 28vw;
+      max-width: 15rem;
+      margin: 0 3vw;
+      display: inline-block; }
+      @media (min-width: 720px) {
+        .snapchat-intro .snap-pics img {
+          width: 100%;
+          max-width: 22rem;
+          margin: 0 4vw; } }
+      @media (min-width: 1010px) {
+        .snapchat-intro .snap-pics img {
+          max-width: 24rem; } }
+
+.snap-filter {
+  margin-top: 15rem;
+  text-align: center; }
+  @media (min-width: 720px) {
+    .snap-filter {
+      margin-top: 30rem; } }
+  @media (min-width: 1010px) {
+    .snap-filter {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+      flex-direction: row-reverse; } }
+  .snap-filter img {
+    max-width: 25rem;
+    margin-bottom: 3rem; }
+    @media (min-width: 720px) {
+      .snap-filter img {
+        max-width: 35rem;
+        margin-bottom: 5rem; } }
+    @media (min-width: 1010px) {
+      .snap-filter img {
+        width: 45%;
+        max-width: 100%;
+        margin-left: 5%;
+        margin-bottom: 0; } }
+  @media (min-width: 1010px) {
+    .snap-filter .snap-desc {
+      width: 45%;
+      margin-right: 5%; } }
+  .snap-filter .snap-desc p {
+    text-align: left; }
+  .snap-filter .snap-desc .snap-stats {
+    margin-top: 3rem;
+    text-align: left; }
+    .snap-filter .snap-desc .snap-stats ul {
+      display: inline-block; }
+      .snap-filter .snap-desc .snap-stats ul:nth-of-type(2) {
+        margin-left: 7rem; }
+    .snap-filter .snap-desc .snap-stats li:not(:first-of-type) {
+      margin-top: 2rem; }
+    .snap-filter .snap-desc .snap-stats .stat-titles li {
+      font-weight: 800; }
