--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -45,7 +45,7 @@ img {
 	height: auto;
 }
 
-.intro,#portfolio,#about,#skills,#contact {
+.intro,#portfolio,#about,#skills,#contact,.cs-container {
 	max-width: $lg-desktop;
 	margin-left: auto;
 	margin-right: auto;
@@ -55,14 +55,14 @@ img {
 	}
 }
 
-#portfolio,#about,#skills,#contact {
+#portfolio,#about,#skills,#contact,.cs-container {
 	@include sm-desktop {
-		padding: 0 16rem 0 20rem;
+		padding: 0 20rem 0 20rem;
 	}
 	@include md-desktop {
-		padding: 0 21rem 0 25rem;
+		padding: 0 25rem 0 25rem;
 	}
 	@include lg-desktop {
-		padding: 0 26rem 0 30rem;
+		padding: 0 30rem 0 30rem;
 	}
 }
