--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -35,6 +35,7 @@ form {
 			height: 4rem;
 			margin-top: 5rem;
 			border: 1px solid black;
+			border-radius: 0;
 			background: transparent;
 			font-size: 1.4rem;
 			cursor: pointer;
