--- a/scss/components/component-dir.scss
+++ b/scss/components/component-dir.scss
@@ -4,7 +4,14 @@
 @import 'sidebars';
 @import 'cards';
 @import 'form';
+@import 'close';
+@import 'cs-back';
 
 /*CASE STUDIES*/
 @import 'snapchat-intro';
 @import 'snap-filter';
+@import 'montoya-intro';
+@import 'elbuen-intro';
+@import 'drinks-intro';
+@import 'lambdas-intro';
+@import 'cycle-intro';
