--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,6 +4,11 @@ $gray: #A0A0A0;
 $shadow: rgba(0,0,0,0.1);
 $ltgray: #F0F0F0;
 $yellow: #FFFF00;
+$blue: #003777;
+$montoya-orange: #F5AF2D;
+$elbuen-orange: #EC8A32;
+$brown: #78431B;
+$off-black: #424242;
 
 /*FONT*/
 $nunito: 'Nunito Sans', 'Helvetica', sans-serif;
