--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -47,6 +47,7 @@
 			}
 
 			p {
+				@transitionFX(.6s);
 				color: $red;
 				display: none;
 				font-size: 1.2rem;
@@ -54,8 +55,17 @@
 				@include sm-desktop {
 					display: block;
 					visibility: hidden;
+					opacity: 0;
 					margin-top: 9rem;
 					margin-bottom: 1rem;
+				}
+			}
+
+			.hovered {
+				@include transitionFX(.6s, opacity, ease);
+				@include sm-desktop {
+					visibility: visible;
+					opacity: 1;
 				}
 			}
 		}
