--- a/scss/components/_mobile-nav.scss
+++ b/scss/components/_mobile-nav.scss
@@ -1,3 +1,54 @@
 .mobile-nav {
-	display: none;
+	@include transitionFX(.3s);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	background: white;
+	z-index: 4;
+
+	.mobile-links {
+		width: 100%;
+		height: 100%;
+		position: relative;
+
+		.mobile-list {
+			@include shift(0, -50%);
+			position: absolute;
+			top: 50%;
+			left: 0;
+			opacity: 0;
+
+			li {
+				&:not(:first-of-type) {
+					margin-top: 4rem;
+				}
+
+				.m-link {
+					font-size: 3rem;
+					font-weight: 800;
+					color: black;
+					text-decoration: none;
+					text-transform: none;
+					letter-spacing: 0;
+					@include sm-tablet {
+						font-size: 3.8rem;
+					}
+				}
+			}
+		}
+
+		.list-slide {
+			@include transitionFX(.5s);
+			left: 10%;
+			opacity: 1;	
+		}
+	}
+}
+
+.opened {
+	@include transitionFX(.3s);
+	opacity: 1;
 }
