--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -42,6 +42,7 @@
 		}
 
 		a {
+			@include transitionFX(.3s);
 			text-decoration: none;
 			color: black;
 			letter-spacing: 0.2rem;
@@ -58,6 +59,10 @@
 			&:nth-of-type(4) {
 				margin-left: auto;
 			}
+			&:hover {
+				color: $red;
+			}
+
 			img {
 				width: auto;
 				height: 4rem;
