--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -38,6 +38,7 @@ form {
 			border-radius: 0;
 			background: transparent;
 			font-size: 1.4rem;
+			font-family: $nunito;
 			cursor: pointer;
 			&:hover {
 				background: black;
