Removed reCAPTCHA, AJAX contact form functional again, and margin fixes for main page sections.

--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -2,8 +2,8 @@
 	@include clearfix;
 	padding-bottom: 15rem;
 	@include sm-tablet {
-		padding-top: 30rem;
-		padding-bottom: 0;
+		padding-top: 20rem;
+		padding-bottom: 10rem;
 	}
 
 	.about-text {
