--- a/scss/layouts/_skills.scss
+++ b/scss/layouts/_skills.scss
@@ -1,8 +1,8 @@
 #skills {
 	padding-bottom: 15rem;
 	@include sm-tablet {
-		padding-top: 30rem;
-		padding-bottom: 0;
+		padding-top: 20rem;
+		padding-bottom: 10rem;
 	}
 
 	h1 {
