--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,7 @@ img {
   @media (min-width: 720px) {
     #portfolio {
       padding-top: 30rem;
-      padding-bottom: 0; } }
+      padding-bottom: 10rem; } }
   #portfolio .card:nth-of-type(n+2) {
     margin-top: 8rem; }
   @media (min-width: 600px) {
@@ -295,8 +295,8 @@ img {
     clear: both; }
   @media (min-width: 720px) {
     #about {
-      padding-top: 30rem;
-      padding-bottom: 0; } }
+      padding-top: 20rem;
+      padding-bottom: 10rem; } }
   @media (min-width: 720px) {
     #about .about-text {
       width: 45%;
@@ -336,8 +336,8 @@ img {
   padding-bottom: 15rem; }
   @media (min-width: 720px) {
     #skills {
-      padding-top: 30rem;
-      padding-bottom: 0; } }
+      padding-top: 20rem;
+      padding-bottom: 10rem; } }
   #skills h1 {
     font-size: 3.6rem; }
     @media (min-width: 1010px) {
@@ -363,7 +363,7 @@ img {
   padding-bottom: 15rem; }
   @media (min-width: 720px) {
     #contact {
-      padding-top: 30rem;
+      padding-top: 20rem;
       padding-bottom: 20rem; } }
   @media (min-width: 1010px) {
     #contact {
@@ -388,6 +388,8 @@ img {
         -o-transition: all 0.2s ease;
         transition: all 0.2s ease;
         color: #FF1744; }
+      #contact p a:visited {
+        color: black; }
   #contact form {
     margin-top: 6rem; }
   #contact .fin {
