--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+*::-webkit-scrollbar {
+  display: none; }
+
 html {
   width: 100%;
   height: 100%;
@@ -51,15 +54,15 @@ img {
       padding: 0 4rem; } }
 
 @media (min-width: 1010px) {
-  #portfolio, #about, #skills, #contact, .cs-container {
+  #portfolio, #about, #skills, #contact {
     padding: 0 20rem 0 20rem; } }
 
 @media (min-width: 1240px) {
-  #portfolio, #about, #skills, #contact, .cs-container {
+  #portfolio, #about, #skills, #contact {
     padding: 0 25rem 0 25rem; } }
 
 @media (min-width: 1420px) {
-  #portfolio, #about, #skills, #contact, .cs-container {
+  #portfolio, #about, #skills, #contact {
     padding: 0 30rem 0 30rem; } }
 
 .cs-hero {
@@ -128,6 +131,15 @@ img {
 .cs-container {
   overflow: hidden;
   position: relative; }
+  @media (min-width: 1010px) {
+    .cs-container {
+      padding: 0 10rem 0 10rem; } }
+  @media (min-width: 1240px) {
+    .cs-container {
+      padding: 0 12.5rem 0 12.5rem; } }
+  @media (min-width: 1420px) {
+    .cs-container {
+      padding: 0 15rem 0 15rem; } }
   .cs-container .cs-back {
     position: absolute;
     top: 2.2rem;
@@ -153,10 +165,24 @@ img {
       margin-top: 30rem; }
       .cs-fw:first-of-type {
         margin-top: 8rem; } }
+  @media (min-width: 1010px) {
+    .cs-fw {
+      padding: 0 10rem 0 10rem; } }
+  @media (min-width: 1240px) {
+    .cs-fw {
+      padding: 0 12.5rem 0 12.5rem; } }
+  @media (min-width: 1420px) {
+    .cs-fw {
+      padding: 0 15rem 0 15rem; } }
   .cs-fw p a {
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
     color: black; }
     .cs-fw p a:visited {
       color: black; }
+    .cs-fw p a:hover {
+      color: #FF1744; }
 
 .cs-image {
   margin-top: 15rem; }
@@ -175,6 +201,15 @@ img {
     .more-projects {
       margin-top: 30rem;
       margin-bottom: 20rem; } }
+  @media (min-width: 1010px) {
+    .more-projects {
+      padding: 0 10rem 0 10rem; } }
+  @media (min-width: 1240px) {
+    .more-projects {
+      padding: 0 12.5rem 0 12.5rem; } }
+  @media (min-width: 1420px) {
+    .more-projects {
+      padding: 0 15rem 0 15rem; } }
   .more-projects .card:last-of-type {
     margin-top: 8rem; }
   @media (min-width: 600px) {
@@ -245,6 +280,27 @@ img {
         left: 50%; } }
     .intro .intro-text h3 {
       margin: 3rem 0; }
+    .intro .intro-text .shrink-text {
+      overflow: hidden;
+      -webkit-animation: typing 1.7s steps(40, end);
+      animation: typing 1.7s steps(40, end); }
+    .intro .intro-text .fade-intro {
+      opacity: 0;
+      -webkit-animation: fade-in 1.7s;
+      animation: fade-in 1.7s;
+      -webkit-animation-delay: 1.7s;
+      animation-delay: 1.7s;
+      -webkit-animation-fill-mode: forwards;
+      animation-fill-mode: forwards; }
+    .intro .intro-text .delay-typing {
+      overflow: hidden;
+      width: 0;
+      -webkit-animation: typing 1.7s steps(40, end);
+      animation: typing 1.7s steps(40, end);
+      -webkit-animation-delay: 3.4s;
+      animation-delay: 3.4s;
+      -webkit-animation-fill-mode: forwards;
+      animation-fill-mode: forwards; }
   .intro .intro-link {
     -webkit-transform: translate(-50%, 0);
     -ms-transform: translate(-50%, 0);
@@ -264,6 +320,30 @@ img {
     left: 50%;
     bottom: 0; }
 
+@-webkit-keyframes typing {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
+
+@keyframes typing {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
+
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes fade-in {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 #portfolio {
   padding-top: 15rem;
   padding-bottom: 15rem;
@@ -276,7 +356,7 @@ img {
   @media (min-width: 720px) {
     #portfolio {
       padding-top: 30rem;
-      padding-bottom: 10rem; } }
+      padding-bottom: 0rem; } }
   #portfolio .card:nth-of-type(n+2) {
     margin-top: 8rem; }
   @media (min-width: 600px) {
@@ -295,8 +375,8 @@ img {
     clear: both; }
   @media (min-width: 720px) {
     #about {
-      padding-top: 20rem;
-      padding-bottom: 10rem; } }
+      padding-top: 30rem;
+      padding-bottom: 0rem; } }
   @media (min-width: 720px) {
     #about .about-text {
       width: 45%;
@@ -336,8 +416,8 @@ img {
   padding-bottom: 15rem; }
   @media (min-width: 720px) {
     #skills {
-      padding-top: 20rem;
-      padding-bottom: 10rem; } }
+      padding-top: 30rem;
+      padding-bottom: 0rem; } }
   #skills h1 {
     font-size: 3.6rem; }
     @media (min-width: 1010px) {
@@ -363,7 +443,7 @@ img {
   padding-bottom: 15rem; }
   @media (min-width: 720px) {
     #contact {
-      padding-top: 20rem;
+      padding-top: 30rem;
       padding-bottom: 20rem; } }
   @media (min-width: 1010px) {
     #contact {
@@ -541,10 +621,11 @@ img {
       height: 6.5rem; } }
 
 .sidebar, .cs-sidebar {
-  -webkit-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  display: none; }
+  display: none;
+  -webkit-transition: all 0.4s ease, -webkit-transform-origin 1ms, -webkit-transform 1ms;
+  transition: all 0.4s ease, -webkit-transform-origin 1ms, -webkit-transform 1ms;
+  transition: all 0.4s ease, transform-origin 1ms, transform 1ms;
+  transition: all 0.4s ease, transform-origin 1ms, transform 1ms, -webkit-transform-origin 1ms, -webkit-transform 1ms; }
   @media (min-width: 1010px) {
     .sidebar, .cs-sidebar {
       width: 100vh;
@@ -581,6 +662,9 @@ img {
   background: #F0F0F0; }
 
 .sidebar-active {
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
   left: 0;
   z-index: 4;
   visibility: visible; }
@@ -736,6 +820,22 @@ form .submit-btn {
   transition: all 0.3s ease;
   opacity: 1; }
 
+.index-overlay {
+  position: fixed;
+  top: 100vh;
+  width: 100vw;
+  height: 0;
+  overflow: hidden; }
+
+.overlay-open {
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  height: 100vh;
+  top: 0;
+  background-color: #003777;
+  z-index: 5; }
+
 /*CASE STUDIES*/
 .snapchat {
   background: #FFFF00; }
@@ -763,6 +863,7 @@ form .submit-btn {
       margin-top: 30rem; } }
   @media (min-width: 1010px) {
     .snap-filter {
+      padding: 0 10rem 0 10rem;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -773,6 +874,12 @@ form .submit-btn {
       -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
       flex-direction: row-reverse; } }
+  @media (min-width: 1240px) {
+    .snap-filter {
+      padding: 0 12.5rem 0 12.5rem; } }
+  @media (min-width: 1420px) {
+    .snap-filter {
+      padding: 0 15rem 0 15rem; } }
   .snap-filter img {
     max-width: 25rem;
     margin-bottom: 3rem; }
