--- a/scss/base/_case-studies.scss
+++ b/scss/base/_case-studies.scss
@@ -64,6 +64,15 @@
 .cs-container {
 	overflow: hidden;
 	position: relative;
+	@include sm-desktop {
+		padding: 0 10rem 0 10rem;
+	}
+	@include md-desktop {
+		padding: 0 12.5rem 0 12.5rem;
+	}
+	@include lg-desktop {
+		padding: 0 15rem 0 15rem;
+	}
 
 	.cs-back {
 		position: absolute;
@@ -95,13 +104,26 @@
 			margin-top: 8rem;
 		}
 	}
+	@include sm-desktop {
+		padding: 0 10rem 0 10rem;
+	}
+	@include md-desktop {
+		padding: 0 12.5rem 0 12.5rem;
+	}
+	@include lg-desktop {
+		padding: 0 15rem 0 15rem;
+	}
 	
 	p {
 
 		a {
+			@include transitionFX(.2s);
 			color: black;
 			&:visited {
 				color: black;
+			}
+			&:hover {
+				color: $red;
 			}
 		}
 	}
@@ -121,6 +143,15 @@
 	@include sm-tablet {
 		margin-top: 30rem;
 		margin-bottom: 20rem;
+	}
+	@include sm-desktop {
+		padding: 0 10rem 0 10rem;
+	}
+	@include md-desktop {
+		padding: 0 12.5rem 0 12.5rem;
+	}
+	@include lg-desktop {
+		padding: 0 15rem 0 15rem;
 	}
 
 	.card {
