--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -3,6 +3,10 @@
 	        box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+	display: none;
+}
+
 html {
 	width: 100%;
 	height: 100%;
@@ -55,7 +59,7 @@ img {
 	}
 }
 
-#portfolio,#about,#skills,#contact,.cs-container {
+#portfolio,#about,#skills,#contact {
 	@include sm-desktop {
 		padding: 0 20rem 0 20rem;
 	}
